k8s/event-bus.yml
apiVersion: apps/v1             
kind: Deployment
metadata:
  name: event-deployment
  labels:
    app: event-deployment
spec:
  replicas: 1       
  selector:            
    matchLabels:
     app: event-template
  template:        
    metadata:
      labels:           
        app: event-template
    spec:
      containers:
      - name: event-container
        image: event                                                                                   
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 4005 
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: NodePort      
  selector:          
    app: event-template      
  ports:
    - protocol: TCP
      port: 4005              
      targetPort: 4005
