k8s/posts-clusterip.yml
apiVersion: apps/v1             
kind: Deployment
metadata:
  name: posts-deployment
  labels:
    app: posts-deployment
spec:
  replicas: 1       
  selector:            
    matchLabels:
     app: posts-template
  template:        
    metadata:
      labels:           
        app: posts-template
    spec:
      containers:
      - name: posts-container
        imagePullPolicy: IfNotPresent
        image: posts                                                                                   
        resources:
          limits:
            memory: "256Mi"
            cpu: "500m"
        ports:
        - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  type: NodePort     
  selector:          
    app: posts-template      
  ports:
    - protocol: TCP
      port: 4000              
      targetPort: 4000
